# agent-foundry

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pr-check.yml  release.yml
cli/claude/commands/: review-process.md  update-foundry-check.md  update-foundry-interactive.md
cli/claude/skills/: IMPROVEMENT-PROCESS.md  README.md
commands/: copilot-cli.md
common/mcp/: mcp-servers.json
docs/: BENCHMARKS.md
skills/: README.md
skills/copilot-cli/: SKILL.md
skills/review-process/: SKILL.md  python-gui.md  software.md
skills/review-process/review-state-template/: README.md
skills/update-foundry/scripts/: update-foundry.sh
tests/: __init__.py  test_adapters.py  test_claude_md.py  test_foundry_cache_and_groups.py  test_issues_25_26.py  test_private_sources.py  test_prj_skills.py  test_setup_integration.py  test_skill_eval.py  test_skill_parser.py  test_skill_validation.py
tests/swe_tasks/swe-000-discount/: PROMPT.md  discount.py  test_discount.py
tests/swe_tasks/swe-001-chunk/: PROMPT.md  chunk.py  test_chunk.py
tests/swe_tasks/swe-002-parse-range/: PROMPT.md  ranges.py  test_ranges.py
tests/swe_tasks/swe-003-deepmerge/: PROMPT.md  config.py  test_config.py
tools/: eval_rubric.py  eval_runner.py  run_benchmark.py  run_swe_agentic.py  run_swebench_agentic.py  setup.py  skill_parser.py  validate.py
tools/deepswe/: README.md  pier_copilot_agent.py
tools/foundry/: __init__.py  console.py  deploy.py  detect.py  instructions.py  manifest.py  orchestrator.py  paths.py  payload.py  private.py  registry.py  selection.py
(+45 files in other folders)
