[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-foundry"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.8",
]
[tool.pytest.ini_options]
# tests/swe_tasks holds the SWE benchmark's intentionally-broken fixture code
# (inputs the agentic harness fixes and grades), not foundry unit tests. Exclude
# it from the default suite so CI grades the foundry, not the benchmark inputs.
# The harness runs pytest inside its own copied task dirs, so it is unaffected.
addopts = "-q --cov=tools --cov-report=term-missing --ignore=tests/swe_tasks"
testpaths = ["tests"]
markers = [
    "eval: tests requiring claude CLI (deselect with '-m not eval')",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["tools", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "PTH", "RUF"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["tools"]
